--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native-stack": "^6.2.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-date-picker": "^4.1.3",
+    "react-native-dropdown-picker": "^5.2.3",
     "react-native-easy-content-loader": "^0.3.2",
+    "react-native-element-dropdown": "^1.5.5",
     "react-native-image-picker": "^4.6.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
