--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.5",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
