--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "fbjs": "^3.0.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-blob-util": "^0.13.18",
     "react-native-date-picker": "^4.1.3",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.5",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.6.0",
+    "react-native-pdf": "^6.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
