--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.5",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-pdf": "^6.4.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-share": "^7.3.2",
     "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
