--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-date-picker": "^4.1.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.7",
+    "react-native-fs": "^2.18.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.7.0",
     "react-native-pdf": "^6.4.0",
