--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "fbjs": "^3.0.2",
@@ -22,9 +23,11 @@
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.5",
     "react-native-fetch-blob": "^0.10.8",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^4.6.0",
     "react-native-pdf": "^6.4.0",
+    "react-native-reanimated": "^2.2.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
