--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -23,7 +23,6 @@
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
 # apk signing
@@ -31,3 +30,6 @@ MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
 MYAPP_UPLOAD_STORE_PASSWORD=themanaad
 MYAPP_UPLOAD_KEY_PASSWORD=themanaad
+
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xmx2560m
