--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-screens": "^3.10.1",
     "react-native-share": "^7.3.2",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^12.1.1"
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
