--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "fbjs": "^3.0.2",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-autocomplete-dropdown": "^1.1.6",
     "react-native-blob-util": "^0.13.18",
     "react-native-date-picker": "^4.1.3",
+    "react-native-dropdown-autocomplete-textinput": "^1.0.1",
     "react-native-dropdown-picker": "^5.2.3",
     "react-native-easy-content-loader": "^0.3.2",
     "react-native-element-dropdown": "^1.5.5",
