--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.1",
+    "react-native-select-contact": "^1.6.3",
     "react-native-share": "^7.3.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.0.0"
